Fix project list on mobile window scale

--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -167,18 +167,17 @@
 
   .list-project {
     flex-direction: column;
+    gap: 20px;
+  }
+
+  .list-project div {
+    width: 100%;
   }
 
   .image-project {
-    width: 100% !important;
     background-color: salmon;
     min-width: 100%;
   }
-  /* .image-project img {
-    width: 100%;
-    background-color: aliceblue;
-    margin-bottom: 200px;
-  } */
 }
 
 @media (max-width: 767.98px) {
